--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,6 @@ itsdangerous==1.1.0
 MarkupSafe==1.1.1
 Werkzeug==0.14.1
 
-
+flask-marshmallow==0.10.1
+marshmallow==3.0.0rc9
+marshmallow-sqlalchemy==0.17.0
